fix back & updateList